--- a/Playgound/Playgound.csproj
+++ b/Playgound/Playgound.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+    
     <PropertyGroup>
+        <EnablePackageValidation>true</EnablePackageValidation>
+        <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -10,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.11.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
+      <PackageReference Include="Riok.Mapperly" Version="4.1.0-next.0" />
     </ItemGroup>
 
 </Project>
